# yatube_project

./: LICENSE  README.md  pyproject.toml
yatube/posts/: models.py  views.py
yatube/posts/migrations/: 0001_initial.py  0002_auto_20220908_1341.py
yatube/templates/: base.html
yatube/templates/includes/: footer.html  header.html
yatube/templates/posts/: group_list.html  index.html
yatube/yatube/: settings.py
