[tool.poetry]
name = "yatube-project"
version = "0.1.0"
description = ""
authors = ["Aydrus Zamaev <aydrus.zamaev@gmail.com>"]
readme = "README.md"
packages = [{include = "yatube_project"}]

[tool.poetry.dependencies]
python = "3.7.13"
Django = "2.2.19"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"
djhtml = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
